proxy/envoy/tls_sni/envoy-tls.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            name: envoy.filters.network.http_connection_manager 
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ex
              route_config: 
                name: all
                virtual_hosts:
                  - name: example
                    domains:
                      - '*'
                    routes:
                      - match: { prefix: / } 
                        route:
                          cluster: cluster_0
              http_filters:
                - name: envoy.filters.http.router 

      filter_chains:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext 
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: /ca/envoy-tls.cert
                  private_key:
                    filename: /ca/envoy-tls.key
              #tls_params:
               # tls_maximum_protocol_version: TLSv1_3

      filter_chains:
        - filters:
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              stat_prefix: destination
              cluster: cluster_0
  
  clusters:
    - name: cluster_0
      connect_timeout: 30s
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          #common_tls_context:
          #  validation_context:
          #      trust_chain_verification: ACCEPT_UNTRUSTED # since we're using self signed
            #tls_params:
             # tls_minimum_protocol_version: TLSv1_3
              
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 1447 }
